tests/snapshots/integration__meta__group_commands_namespaced_only.snap
---
source: tests/meta.rs
expression: data
---
RUN
prog -h

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog <COMMAND>

DB COMMANDS:
  db:migrate
  db:seed

EOF
exit 0

# BUILD_OUTPUT
USAGE: prog <COMMAND>

DB COMMANDS:
  db:migrate
  db:seed
